WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317301
Unable to re-enter website environment after short delay
https://bugs.webkit.org/show_bug.cgi?id=317301
Summary
Unable to re-enter website environment after short delay
Jean Haberer
Reported
2026-06-17 07:32:15 PDT
Unable to re-enter website environment after short delay
Attachments
Add attachment
proposed patch, testcase, etc.
Jean Haberer
Comment 1
2026-06-17 07:32:17 PDT
<
rdar://problem/179867733
>
Jean Haberer
Comment 2
2026-06-17 07:37:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/67345
EWS
Comment 3
2026-06-17 10:12:43 PDT
Committed
315388@main
(de88d16504ce): <
https://commits.webkit.org/315388@main
> Reviewed commits have been landed. Closing PR #67345 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug