Unable to re-enter website environment after short delay https://bugs.webkit.org/show_bug.cgi?id=317301 rdar://179867733

Reviewed by Mike Wyrzykowski.

ensureModelPlayer() used a stale local after reloadModelPlayer() swapped
m_modelPlayer, falling through to sourceRequestResource() and triggering a
redundant createModelPlayer -> deleteModelPlayer cascade that wiped the
in-flight immersive request state. Refresh the local after reload so the
fast path is taken.

deleteModelPlayer() routed through exitRemovedImmersiveElementIfNeeded()
whenever a DocumentImmersive existed, cancelling unrelated pending
requests. Gate it on m_detachedForImmersive, and only null m_modelPlayer
in the deletion lambda when it still matches the captured player so an
async callback can't stomp a replacement.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
* Source/WebKit/ModelProcess/cocoa/ModelProcessModelPlayerProxy.mm:
setImmersivePresentation() left m_entityTransformToRestore intact across
mode flips, so didFinishLoading could apply an inline-space transform in
immersive space (modelStandardizedTransformSRT differs by a 0.36x scale).
Clear it on flip since we should't restore entity transforms in between
immersive mode changes.

Canonical link: https://commits.webkit.org/315388@main